experimenting with css to fix improper height on ios

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --app-height: 100%;
-}
-
 * {
   @apply box-border;
 }
@@ -20,9 +16,7 @@ body {
 }
 
 .single--page {
-  min-height: 100vh;
-  min-height: var(--app-height);
-  min-height: -webkit-fill-available;
+  height: -webkit-fill-available;
 }
 
 .home {
